--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrewLog MVP + Timer</title>
+    <title>BrewLog Pro MVP</title>
     <style>
         body { font-family: sans-serif; padding: 20px; background: #f4f1ea; color: #333; }
         .container { max-width: 400px; margin: auto; }
@@ -12,7 +12,6 @@
         button { background: #6f4e37; color: white; border: none; cursor: pointer; border-radius: 4px; font-weight: bold; }
         button:hover { background: #5a3e2b; }
         
-        /* Timer Styles */
         #timer-display { font-size: 48px; font-weight: bold; text-align: center; margin: 10px 0; font-family: monospace; color: #6f4e37; }
         .timer-controls { display: flex; gap: 10px; }
         .timer-controls button { flex: 1; }
@@ -22,12 +21,13 @@
         .rating { color: #d4a017; font-weight: bold; }
         .delete-btn { background: #e74c3c; padding: 5px 8px; font-size: 11px; width: auto; display: inline-block; margin: 0; }
         .header-row { display: flex; justify-content: space-between; align-items: center; }
+        .time-badge { background: #eee; padding: 2px 5px; border-radius: 4px; font-size: 11px; color: #666; }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="card">
-            <h3 style="margin-top:0; text-align: center;">⏱ Brew Timer</h3>
+            <h3 style="margin:0; text-align: center;">⏱ Brew Timer</h3>
             <div id="timer-display">00:00</div>
             <div class="timer-controls">
                 <button id="startStopBtn" onclick="toggleTimer()">Start</button>
@@ -44,7 +44,7 @@
                 <option value="Espresso">Espresso</option>
             </select>
             <input type="number" id="rating" placeholder="Rating (1-5)" min="1" max="5">
-            <button onclick="saveLog()">Save Brew</button>
+            <button onclick="saveLog()">Save Brew & Time</button>
         </div>
 
         <div class="card">
@@ -57,7 +57,6 @@
     </div>
 
     <script>
-        // --- Timer Logic ---
         let timerInterval;
         let seconds = 0;
         let isRunning = false;
@@ -96,22 +95,31 @@
                 `${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
         }
 
-        // --- Log Logic ---
         window.onload = function() { displayLogs(); };
 
         function saveLog() {
             const name = document.getElementById('beanName').value;
             const method = document.getElementById('method').value;
             const rating = document.getElementById('rating').value;
+            const brewTime = document.getElementById('timer-display').innerText;
+
             if(!name || !rating) return alert("Please fill in fields");
 
             const logs = JSON.parse(localStorage.getItem('coffeeLogs')) || [];
-            logs.push({ id: Date.now(), name, method, rating, date: new Date().toLocaleDateString() });
+            logs.push({ 
+                id: Date.now(), 
+                name, 
+                method, 
+                rating, 
+                brewTime: brewTime === "00:00" ? "N/A" : brewTime,
+                date: new Date().toLocaleDateString() 
+            });
             localStorage.setItem('coffeeLogs', JSON.stringify(logs));
 
             displayLogs();
             document.getElementById('beanName').value = '';
             document.getElementById('rating').value = '';
+            resetTimer(); // Clear timer after saving
         }
 
         function deleteLog(id) {
@@ -133,7 +141,10 @@
                 const item = document.createElement('div');
                 item.className = 'log-item';
                 item.innerHTML = `
-                    <span><strong>${log.name}</strong> (${log.method})<br><small>${log.date}</small></span> 
+                    <span>
+                        <strong>${log.name}</strong> (${log.method}) <span class="time-badge">⏱ ${log.brewTime}</span><br>
+                        <small style="color:gray;">${log.date}</small>
+                    </span> 
                     <div style="text-align: right;">
                         <span class="rating">${'★'.repeat(log.rating)}</span><br>
                         <button class="delete-btn" onclick="deleteLog(${log.id})">Delete</button>
