chore: renamed dark mode button to switch mode

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <div class="container">
-        <button class="mode-toggle" onclick="toggleTheme()">🌓 Toggle Dark Mode</button>
+        <button class="mode-toggle" onclick="toggleTheme()">🌓 Switch Mode</button>
 
         <div class="card">
             <h3 style="margin:0; text-align: center;">⏱ Brew Timer</h3>
